--- a/src/app/etiquetas/paginadoEtiqueta/editar-etiqueta/editar-etiqueta.component.html
+++ b/src/app/etiquetas/paginadoEtiqueta/editar-etiqueta/editar-etiqueta.component.html
@@ -1,23 +1,87 @@
-<form [formGroup]="formEtiqueta" (ngSubmit)="modificarEtiqueta()">
-    <div>
-        <label for="idEtiqueta">Id etiqueta</label>
-        <input type="number" id="idFormato" formControlName="idFormato" readonly>
-    </div>
-    <div>
-        <label for="idFormato">Formato de etiqueta</label>
-        <input type="number" id="idFormato" formControlName="idFormato">
-    </div>
-    <div>
-        <label for="filas">Filas</label>
-        <input type="number" id="filas" formControlName="filas">
-    </div>
-    
-    <div>
-        <label for="columnas">Columnas</label>
-        <input type="number" id="columnas" formControlName="columnas">
-    </div>
-    <div>
-        <button type="submit">Guardar</button>
-        <button (click)= "limpiarCampos()"> Limpiar</button>
-    </div>
-</form>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Crear Etiqueta</title>
+</head>
+    <body>
+        <article class="form">
+            <h2>
+                Editar Etiqueta
+            </h2>
+                <form [formGroup]="formEtiqueta" 
+                        (ngSubmit)="crearEtiqueta()">
+                    <div>  
+                        <label for="idEtiqueta">
+                            Etiqueta
+                        </label>
+                        <input list="etiquetas"
+                            id="idEtiqueta" 
+                            formControlName="idEtiqueta"
+                            required>
+                            <datalist id="etiquetas"> 
+                                <option value="Etiqueta 1"> 
+                                <option value="Etiqueta 2"> 
+                                <option value="Etiqueta 3">
+                            </datalist>
+                    </div>
+                    <div>
+                        <label for="filasEtiqueta">
+                            Número de Filas
+                        </label>
+                        <input list="filas"  
+                            id="filasEtiqueta" 
+                            formControlName="filasEtiqueta"
+                            required>
+                            <datalist id="filas"> 
+                                <option value="3"> 
+                                <option value="7"> 
+                                <option value="17">
+                            </datalist>
+                    </div>
+                    <div>
+                        <label for="columnasEtiqueta">
+                            Número de Columnas
+                        </label>
+                        <input list="columnas"  
+                            id="columnasEtiqueta" 
+                            formControlName="columnasEtiqueta"
+                            required>
+                            <datalist id="columnas"> 
+                                <option value="1"> 
+                                <option value="2"> 
+                                <option value="3"> 
+                                <option value="4"> 
+                                <option value="5"> 
+                                <option value="6"> 
+                                <option value="7"> 
+                                <option value="8"> 
+                                <option value="9"> 
+                            </datalist>                    
+                    </div>
+                    <div> 
+                        <label for="idFormato">
+                            Formato
+                        </label>
+                        <input list="formatos"
+                            id="idFormato" 
+                            formControlName="idFormato">
+                            <datalist id="formatos"> 
+                                <option value="Codigo de Barras"> 
+                                <option value="Etiqueta de Envio">
+                            </datalist>
+                    </div>
+                        <button type="reset"
+                                class="reset">
+                            Borrar
+                        </button>
+                        <button type="submit"
+                                class="submit">
+                            Guardar
+                        </button>
+                    </div>
+                </form>
+        </article>
+    </body>
+</html>
