--- a/src/app/productos/editar-producto/editar-producto.component.html
+++ b/src/app/productos/editar-producto/editar-producto.component.html
@@ -1,1 +1,27 @@
-<p>editar-producto works!</p>
+<app-inicio></app-inicio>
+<form [formGroup]="formProducto" (ngSubmit)="modificarProducto()">
+    <div>
+        <label for="idProducto">ID producto</label>
+        <input type="number" id="idProducto" formControlName="idProducto" readonly>
+    </div>
+    <div>
+        <label for="codigoCliente">Código de producto</label>
+        <input type="text" id="codigoCliente" formControlName="codigoCliente">
+    </div>
+    <div>
+        <label for="ean">Código de Barras (ean)</label>
+        <input type="text" id="ean" formControlName="ean">
+    </div>
+    
+    <div>
+        <label for="idEmpresa">Seleccione la empresa proveedora</label>
+        <select id="idEmpresa" formControlName="idEmpresa">
+                <option *ngFor="let empresa of empresas" [value]="empresa.idEmpresa">{{empresa.nombreEmpresa}}</option>
+           
+        </select> 
+    </div>
+    <div>
+        <button type="submit">Guardar</button>
+        <button (click)= "limpiarCampos()"> Limpiar</button>
+    </div>
+</form>
